# GT-MSA-Spring-2026-Team-09

./: .gitignore  README.md  gt_msa_s26_final_outline.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-mkdocs.yml
data/Polymarket/: polymarket_btc_analytics_schema.md
docs/: background.md  conclusion.md  data.md  eda.md  index.md  modeling-journey.md  overview.md
eda/: EDA.ipynb  EDA_Executive.ipynb  audit_raw_timestamps.py  eda_starter_template.md  eda_starter_template.py  gt_msa_s26_eda_outline.md  hshin_eda_btc.ipynb  hshin_eda_polymarket.ipynb  jpark_eda.ipynb  util_eda.py
hshin/fe/kg/: data_engineering.py  hshin-FE-Knowledge-Graph.ipynb
hshin/model/: results.ipynb  run_results.json
hshin/model/v1/: README.md  model_v1.py  run_backtest.py
hshin/model/v2/: README.md  model_v2.py  run_backtest.py
hshin/model/v3/: README.md  model_v3.py  run_backtest.py
jpark/models_final/: README.md  __init__.py
jpark/models_final/step1_baseline_foundation/: README.md  __init__.py  model1.py  run_backtest.py
jpark/models_final/step2_signal_independence_lesson/: README.md  __init__.py  model2.py  run_backtest.py
jpark/models_final/step3_network_demand_discovery/: README.md  __init__.py  model3.py  run_backtest.py
jpark/models_final/step4_structural_optimization/: README.md  __init__.py  model4.py  run_backtest.py
jpark/models_final/step5_systematic_maximization/: README.md  __init__.py  model5.py  optuna_search_v27.py  run_backtest.py
template/: prelude_template.py
tests/: test_polymarket_data.py
(+3 files in other folders)
