[project]
name = "gt-msa-spring-2026-team-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.3",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.3",
    "fonttools==4.61.1",
    "gdown==5.2.1",
    "idna==3.11",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numpy==2.4.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "polars==1.20.0",
    "psutil==6.1.0",
    "pyarrow==23.0.0",
    "pyparsing==3.3.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "scipy==1.17.0",
    "seaborn==0.13.2",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
]
